src/test/ui/parser/range-3.stderr
error: expected one of `.`, `;`, `?`, or an operator, found `..`
  --> $DIR/range-3.rs:4:17
   |
LL |     let r = 1..2..3;
   |                 ^^ expected one of `.`, `;`, `?`, or an operator here

error: aborting due to previous error

